Primer commit - mejorando el código

--- a/Ejemplos1/ClaseInstanciable.cls
+++ b/Ejemplos1/ClaseInstanciable.cls
@@ -11,6 +11,11 @@ Property color As %String;
 /// Método para establecer el color del objeto.
 /// Este método asigna un valor a la propiedad `color` del objeto actual.
 /// @param color (%String) El nuevo color que se asignará al objeto.
+/// 
+/// -------------Ejemplo de uso----------------
+/// USER> set obj = ##class(demo.ClaseInstanciable).%New()  - Instancia un objeto
+/// USER> do obj.setColor("Rojo") - Llama al método para establecer el color
+/// USER> write obj.color - Muestra el color asignado
 Method setColor(color As %String)
 {
             set ..color = color
